# New_Tg_bot_mlbb

./: .gitignore  PROJECT_INFO.md  README.md  Run.py  characters.csv  config.example.py  config.py  download_fonts.py  pyproject.toml  requirements.txt  setup.py
assets/fonts/: DejaVuSansCondensed.pkl  arial.pkl  arialbd.pkl
config/: __init__.py  constants.py  settings.py
db/: characters.db  convert_csv_to_db.py  db_editor.py
db_utils/: README.md  db_summary.md  hero_calculator.py  hero_comparison.py  hero_info.py  hero_stats_gui.py  list_heroes.py  telebot_hero_stats.py  telebot_hero_stats_example.py  tg_hero_stats.py
handlers/: __init__.py  armor_and_resistance.py  chars_table.py  command_handler.py  cybersport_info.py  damage_calculator.py  group_handler.py  help.py  hero_chars.py  hero_greed.py  hero_tiers.py  img_creator.py  menu.py  my_stars.py  rank.py  rank_stars.py  search_teammates.py  season_progress.py  start.py  support.py  video_guide_bot.py  winrate_correction.py
mlbb_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_winrate_correction.py
utils/: db_editor.py
