[build-system]
requires = ["setuptools>=61.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbb_bot"
version = "1.0"
description = "Telegram бот для Mobile Legends: Bang Bang"
requires-python = ">=3.6"
dependencies = [
    "pyTelegramBotAPI>=4.12.0",
    "python-dotenv>=1.0.0",
    "setuptools>=61.0",
    "wheel>=0.45.1"
]